<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/bg_color"
        android:layout_height="match_parent"
        tools:context=".controll.MainActivity">


    <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="198dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_marginLeft="32dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp">

                <TextView
                        android:textSize="32sp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/title_tv"
                        android:textColor="@color/colorAccent"
                        android:text="@string/app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/averia_libre_light"/>

                <TextView
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        android:id="@+id/subtitle_tv"
                        android:textColor="@color/colorAccentLitle"
                        android:text="@string/daily_plans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/averia_libre_light"/>

            </LinearLayout>

            <Button

                    android:id="@+id/btn_new"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="38sp"
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="170dp"
                    android:text="+"
                    android:background="@drawable/btnnew"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="170dp"/>


        </LinearLayout>


        <View
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="#ccc"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="-60dp"
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>


    <TextView
            android:visibility="gone"
            android:id="@+id/no_more_plan"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/no_more_plans"
            android:textColor="@color/colorAccentLitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:fontFamily="@font/averia_libre_light"/>

    <LinearLayout
            android:id="@+id/rl_empty"
            android:visibility="gone"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bgcorner"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:src="@mipmap/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/empty_list"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text="@string/no_plan_to_show"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_libre_light"/>

        <TextView
                android:padding="16dp"
                android:id="@+id/empty_list_desc"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:text="@string/click_to_the_button_to_get_started"
                android:textColor="@color/colorAccentLitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_libre_light"/>

    </LinearLayout>


    <ProgressBar
            android:id="@+id/progress_list"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"/>

</LinearLayout>